--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -416,7 +416,7 @@ El tipo de contribución está más distribuido. Las contribuciones del tipo pro
 
 \pagestyle{empty}
 \begin{landscape}
-\begin{figure}[H]
+\begin{figure}[h]
   \begin{center}
     \includegraphics[scale=0.4]{Burbujas.png}
   \end{center}
@@ -942,7 +942,7 @@ Pueden verse las competencias genéricas evaluadas con cada método en las figur
 
 \pagestyle{empty}
 \begin{landscape}
-\begin{figure}[H]
+\begin{figure}[h]
   \begin{center}
     \includegraphics[scale=0.6]{BurbujaCompetencias1.png}
   \end{center}
@@ -950,7 +950,7 @@ Pueden verse las competencias genéricas evaluadas con cada método en las figur
   \label{fig:competencias1}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[h]
   \begin{center}
     \includegraphics[scale=0.6]{BurbujaCompetencias2.png}
   \end{center}
