--- a/5_experiments_and_results/0_index.tex
+++ b/5_experiments_and_results/0_index.tex
@@ -516,21 +516,28 @@ Evidence palabras_turno:
 
 		19 cuestionarios
 
-\section{Difusión}
+\section{Contribuciones}
 
-	Como resultados de los estudios de caso realizados durante los tres cursos en que se ha gestado esta tesis doctoral se han publicado trabajos en congresos y revistas. A continuación se enumeran las contribuciones referentes a cada herramienta.
+	A continuación se indican las aportaciones principales que se han realizado durante la elaboración de este trabajo de investigación:
 
-	\subsection{AssessMediaWiki}
+	\subsection*{Revistas}
 
-		Conferencia: SPDECE 2012; y revista: CHB, 2012
+	\begin{itemize}
+	\item Artículo en la revista Computers in Human Behavior (2014), titulado ``Scalability of assessments of wiki-based learning experiences in higher education´´~\cite{palomo2014scalability}.
+	\item Artículo en la revista International Journal of Engineering Education (2015), titulado ``A Domain Specific Language for Online Learning Competence Assessments´´~\cite{Balderas:2015}.
+	\item Artículo en la Revista Iberoamericana de Tecnologias del Aprendizaje (2015), titulado ``Learning Technologies and Semantic Integration of Learning Resources´´~\cite{dodero2015learning}.
+	\end{itemize}
 
-	\subsection{EvalCourse}
+	\subsection*{Congresos}
 
-		Conferencias: EC-TEL 2013, ISELEAR 2013 y SIIE 2014; Revista: IJEE, 2015
+	\begin{itemize}
+	\item Artículo presentado en el congreso IX Simposio Pluridisciplinar sobre Diseño, Evaluación y Descripción de Contenidos Educativos (SPDECE 2012), titulado ``Qualitative assessment of wiki-based learning processes´´~\cite{Balderas:2012}.
+	\item Artículo presentado en el I International Conference on Technological Ecosystem for Enhancing Multiculturality (TEEM 2013), titulado ``A generative computer language to customize online learning assessments´´~\cite{balderas2013generative}.
+	\item Artículo presentado en el International Symposium on Computers in Education (SIIE 2014), titulado``Domain-driven competence assessment in virtual learning environments. Application to planning and time management skills´´~\cite{balderas2014domain}.
+	\item Artículo presentado en el III International Conference on Technological Ecosystem for Enhancing Multiculturality (TEEM 2015), titulado ``A Domain Specific Language to retrieve objective indicators for foreign language learning in virtual worlds´´~\cite{balderas2015domain}.
+	\item Artículo presentado en el  III Congreso Internacional Sobre Aprendizaje, Innovación y Competitividad (CINAIC 2015), titulado ``Evaluación del trabajo individual y grupal en un wiki´´~\cite{reinoso2015evaluacion}.
+	\end{itemize}
 
-	\subsection{EvalSim}
-
-		Conferencias: ISELEAR 2015; Revista: JITR, 2016
 
 \section{Conclusiones}
 
