--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1396,6 +1396,42 @@ year = {2006}
   year={2012}
 }
 
+@article{palomo2014scalability,
+  title={Scalability of assessments of wiki-based learning experiences in higher education},
+  author={Palomo-Duarte, Manuel and Dodero, Juan Manuel and Garc{\'\i}a-Dom{\'\i}nguez, Antonio and Neira-Ayuso, Pablo and Sales-Montes, Noelia and Medina-Bulo, Inmaculada and Palomo-Lozano, Francisco and Castro-Cabrera, Carmen and Rodr{\'\i}guez-Posada, Emilio J and Balderas, Antonio},
+  journal={Computers in Human Behavior},
+  volume={31},
+  pages={638--650},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{dodero2015learning,
+  title={Learning technologies and semantic integration of learning resources},
+  author={Dodero, Juan Manuel and Palomo-Duarte, Manuel and Ruiz-Rube, Iv{\'a}n and Traverso, Ignacio and Mota, Jos{\'e} Miguel and Balderas, Antonio},
+  journal={Tecnologias del Aprendizaje, IEEE Revista Iberoamericana de},
+  volume={10},
+  number={1},
+  pages={11--16},
+  year={2015},
+  publisher={IEEE}
+}
+
+@inproceedings{balderas2014domain,
+  title={Domain-driven competence assessment in virtual learning environments. Application to planning and time management skills},
+  author={Balderas, Antonio and Galan-Pinero, Alvaro and Caballero Hernandez, Juan Antonio and Rodriguez Gomez, Gregorio and Dodero, Juanma and Palomo-Duarte, Manuel},
+  booktitle={Computers in Education (SIIE), 2014 International Symposium on},
+  pages={121--126},
+  year={2014},
+  organization={IEEE}
+}
+
+@inproceedings{reinoso2015evaluacion,
+  title={{Evaluación del trabajo individual y grupal en un wiki}},
+  author={Reinoso, Antonio J. and Palomo-Duarte, Manuel and Tocino-Garcia, Jose Tomas and Ortega-Valiente, Juan and Balderas, Antonio},
+  booktitle={ III Congreso Internacional Sobre Aprendizaje, Innovación y Competitividad. CINAIC 2015}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
