--- a/dissertation.tex
+++ b/dissertation.tex
@@ -218,8 +218,11 @@
 
 %: ----------------------- appendix ------------------------
 
-%\appendix
-
+\appendix
+% Cuestionario
+\include{Apendice/Cuestionario}
+% Entrevista
+\include{Apendice/Entrevistas}
 
 %: ----------------------- bibliography ------------------------
 
